# eod

./: .gitignore  .travis.yml  README.md  build.gradle  gradle.properties  settings.gradle  testing.txt
.github/workflows/: build.yml
android/: AndroidManifest.xml  CMakeLists.txt  build.gradle
android/androidTest/com/boliao/eod/: IntegrationInstrumentedTest.java  UnitInstrumentedTest.java
android/assets/: level0.tmx
android/assets/maps/: level0.tmx
android/assets/sprites/: bug1.tps  bug1.txt  cockroach.txt  player.tps  player.txt
android/assets/sprites/raw/: cockroach.tps
android/res/drawable/: ic_launcher_foreground.xml
android/res/drawable-anydpi/: ic_stat_batt.xml  ic_stat_bug.xml  ic_stat_name.xml  ic_stat_walk.xml
android/res/layout/: activity_login.xml  activity_splash.xml
android/res/values/: strings.xml
android/src/com/boliao/eod/: AndroidLauncher.java  AndroidLauncher.kt  App.kt  EODApp.kt  EncryptNameIntentService.java  GameStateService.java  GameStateService.kt  LoginActivity.java  MyIntentService.kt  NameCryptionService.java  NameCryptionService.kt  NetworkRequestQueue.java  NetworkRequestQueue.kt  OnBootReceiver.java  OnBootReceiver.kt  PasswordGeneratorService.kt  Player.kt  PlayerDAO.kt  PlayerDB.kt  PlayerRepo.kt  ReminderJobService.java  ReminderWorker.java  ReminderWorker.kt  ScreenOnReceiver.java  Splash.java  Splash.kt  SplashViewModel.java  SplashViewModel.kt  SplashViewModelRepo.kt  UserEncryptionService.java  (+7 more)
android/src/cpp/: CMakeLists.txt  core-lib.cpp  native-lib.cpp
core/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary341/: build.gradle
(+62 files in other folders)
